memcpy/memset: tune AVX tails and split benches
- tune memcpy AVX2/NT paths with sequential tail helper and safer alignment prologue

- tune memset AVX2/NT thresholds and tail handling to reduce cliff-zone regressions

- replace monolithic string_ops bench with dedicated memcpy/memset benches

- add TODO performance tracker and mark memcpy/memset benchmark status

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,9 @@ edition = "2024"
 criterion = "0.5"
 
 [[bench]]
-name = "string_ops"
+name = "memcpy"
+harness = false
+
+[[bench]]
+name = "memset"
 harness = false
